homepage design & friends page design

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,6 @@
         @apply w-full flex justify-center my-4 text-reval-white font-poppins font-semibold uppercase relative after:absolute after:content-[""] after:h-[1px] after:w-[40%] after:bg-pixel-white after:left-0 after:top-2/4 before:absolute before:content-[""] before:h-[1px] before:w-[40%] before:bg-pixel-white before:right-0 before:top-2/4
     }
     .navlistitem {
-        @apply flex items-center gap-x-2 p-3 hover:bg-dust-white cursor-pointer
+        @apply flex items-center gap-x-2 p-3 hover:bg-pixel-white cursor-pointer
     }
   }
