--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@
     .wrap {
         @apply max-w-container mx-auto
     }
+    .img {
+        @apply w-full h-full object-cover
+    }
     .loginInputbox {
         @apply w-full bg-gray-50 border border-pixel-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-dust-white dark:border-pixel-white dark:placeholder-gray-400 dark:text-dark-blue dark:focus:ring-blue-500 dark:focus:border-blue-500 outline-none
     }
